@@ -2,3 +2,4 @@ Going to keep a log of things we've changed in time order. Not sure if this will
 
 * Updated compileSdkVersion, buildToolsVersion, targetSdkVersion, appcompat version, and support annotations version
 
+* Fix issue with activity_detail.xml that happened in S06.01 somehow
